fixed alignment

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ body {
 }
 
 .swiper-container {
-  height: max-content;
+  /* height: max-content; */
   @apply lg:h-[50vh];
 }
 
